Fixed loading icon on safari

--- a/src/scss/scene.scss
+++ b/src/scss/scene.scss
@@ -231,5 +231,4 @@ body.modal {
     display         : flex;
     justify-content : center;
     align-items     : center;
-    background-color: $color-grey;
 }
